[package]
name = "thstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = {version = "1.0.12", features=["menu"]}
native-windows-derive = "1.0.3"

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug"
]

[build-dependencies]
embed-resource = "1.7"
